Stop horizontal scrolling on iPhone

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -141,6 +141,14 @@ li {
     right: 0;
     top: -4px; }
 
+@media (max-width: 320px) {
+  .row {
+    max-width: 300px; } }
+
+@media (max-width: 320px) {
+  .container {
+    padding: 0 5px; } }
+
 .delete-item {
   font-size: 20px;
   color: red;
